Setup of cpp implementation complete

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@ src/gen
 *Makefile
 .idea/
 build*
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Makefile
+cmake_install.cmake
+install_manifest.txt
+CMakeLists.txt.user
