Not using exceptions to sipher information anymore

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,6 +13,7 @@ set(SOURCE_FILES
         QmlVisitor.h
         QmlVisitor.cpp
         ParseException.h
+        KRuleOutput.cpp
         EnvironmentVerifierQml.cpp
         EnvironmentVerifierQml.h
         EnvironmentVerifier.h
