Refactored main creating a KRuleEngine class

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,6 +13,7 @@ set(SOURCE_FILES
         retType/RetTypeString.cpp
         retType/RetTypeBool.cpp
         nodewrapper.cpp
+        kruleengine.cpp
         )
 include_directories(.)
 
